--- a/build.gradle
+++ b/build.gradle
@@ -23,5 +23,5 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
-
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 }
