--- a/build.gradle
+++ b/build.gradle
@@ -24,4 +24,6 @@ dependencies {
 
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.14.0'
+
 }
