--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/gam-study?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=pby1996.06.10
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${file.rootPath}
 # 上传文件总的最大值
 spring.servlet.multipart.max-request-size=10MB
 # 单个文件的最大值
 spring.servlet.multipart.max-file-size=10MB
-file.rootPath=F:\\document\\gam-study
-localHost=http://192.168.1.186:8080
+file.rootPath=/Users/a509/Documents/other/gam-study
+localHost=http://192.168.50.145:8080
